# zair

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  deny.toml  flake.nix  rust-toolchain.toml
.github/actions/setup-rust-build/: action.yml
.github/workflows/: ci.yml
crates/airdrop/: Cargo.toml
crates/airdrop/src/: airdrop_configuration.rs  chain_nullifiers.rs  cli.rs  commands.rs  main.rs  proof.rs  unspent_notes_proofs.rs
crates/airdrop/src/commands/: airdrop_claim.rs  airdrop_configuration.rs
crates/light-wallet-api/: Cargo.toml  build.rs
crates/light-wallet-api/src/: lib.rs
crates/mnemonic-to-fvks/: Cargo.toml
crates/mnemonic-to-fvks/src/: lib.rs  main.rs
crates/non-membership-proofs/: Cargo.toml  helpers.md
crates/non-membership-proofs/src/: chain_nullifiers.rs  lib.rs  merkle.rs  nullifier_source.rs  source.rs  user_nullifiers.rs  utils.rs
crates/non-membership-proofs/src/merkle/: node.rs  tree.rs
crates/non-membership-proofs/src/nullifier_source/: file.rs  light_walletd.rs
crates/non-membership-proofs/src/source/: file.rs  light_walletd.rs
crates/non-membership-proofs/src/source/light_walletd/: config.rs
crates/non-membership-proofs/src/user_nullifiers/: decrypt_notes.rs
crates/zair-cli/src/: cli.rs  main.rs
crates/zair-nonmembership/src/sparse/: sapling.rs
crates/zair-orchard-circuit/src/circuit/: airdrop.rs
crates/zair-orchard-proofs/src/: lib.rs
crates/zair-sapling-circuit/src/: circuit.rs
crates/zair-sapling-proofs/: Cargo.toml
crates/zair-sapling-proofs/src/: types.rs
crates/zair-sapling-proofs/src/prover/: builder.rs  proving.rs
crates/zair-sdk/src/: network_params.rs
crates/zair-sdk/src/api/: mod.rs  sign.rs
crates/zair-sdk/src/commands/: claim_proofs.rs  claim_proofs_prove.rs  claim_submission_sign.rs  submission_messages.rs  workflows.rs
crates/zcash-notes-proof/: Cargo.toml  build.rs  find_user_notes.rs
crates/zcash-notes-proof/src/: cli.rs  find_user_notes_minimal.rs  lib.rs  main.rs
docs/: USAGE.md
docs/src/getting-started/: index.md
docs/src/integration/: namada.md
nix/: airdrop-orchard-nullifier.patch  devshell.nix  git-hooks.nix
