[package]
name = "mnemonic-to-fvks"
version = "0.1.0"
edition.workspace = true

[dependencies]
bip39 = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
rpassword = { workspace = true }
zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
