[package]
name = "zcash-notes-proof"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
eyre = { workspace = true }
hex = "0.4"
orchard = "0.11.0"
prost = "0.14.1"
rustls = { version = "0.23.35", features = ["ring"] }
sapling-crypto = "0.5.0"
tokio = { version = "1.6", features = ["rt-multi-thread"] }
tonic = { version = "0.14.2", features = ["tls-webpki-roots"] }
tonic-prost = "0.14.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
zcash_note_encryption = "0.4"
zcash_primitives = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14.2"

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]
