[package]
name = "zcash-notes-proof"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
light-wallet-api = { workspace = true }
orchard = { workspace = true }
prost = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
sapling = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic = { workspace = true, features = ["tls-webpki-roots"] }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]
